fix click target issue on narrow screens

--- a/app/_css/app.css
+++ b/app/_css/app.css
@@ -6837,6 +6837,7 @@ a.get-colored:hover {
 
 .ui-hide {
   opacity: 0 !important;
+  display: none !important;
 }
 
 .transparent {
